<resources>
    <string translatable="false" name="app_name">TonsOfDamage</string>
    <string name="choose_region">Choose region</string>
    <string name="choose_filter">Choose filter</string>
    <string name="summoner">Summoner name…</string>
    <string name="Ok">OK</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="first_setup_explain">Welcome to TonsOfDamage, we need to do an initial setup before you can start enyoing the app.</string>
    <string name="pick_summoner_hint">Enter your summoner name and enjoy</string>
    <string name="region">Region</string>
    <string name="summoner_not_found">Summoner not found</string>
    <string name="title_home">Home</string>
    <string name="title_champions">Champions</string>
    <string name="all">All</string>
    <string name="free">Free</string>
    <string name="tank">Tank</string>
    <string name="fighter">Fighter</string>
    <string name="assassin">Assassin</string>
    <string name="mage">Mage</string>
    <string name="support">Support</string>
    <string name="marksman">Marksman</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Champion name…</string>
    <string name="action_view_mode">View Mode</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="overview">Overview</string>
    <string name="champion_abilities">Abilities</string>
    <string name="cooldown">Cooldown:</string>
    <string name="cost">Cost:</string>
    <string name="health">Health: </string>
    <string name="mana">Mana: </string>
    <string name="health_regen">Health Regen: </string>
    <string name="mana_regen">Mana Regen: </string>
    <string name="attack">Attack: </string>
    <string name="attack_speed">Attack Speed: </string>
    <string name="armor">Armor: </string>
    <string name="magic_resist">Magic Resist: </string>
    <string name="range">Range: </string>
    <string name="movement">Movement: </string>
    <string name="crit">Crit. chance: </string>
    <string name="tips">Tips</string>
    <string name="allytips">Ally Tips</string>
    <string name="enemytips">Enemy Tips</string>
    <string name="recommended_items">Recommended Items</string>
    <string name="champion_recommended">Recommended</string>
    <string name="mode">Mode:</string>
    <string name="champion_skins">Skins</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="permisson_needed">Permisson needed to download the image</string>
    <string name="give_permisson">Grant it</string>
    <string name="download_completed">Download completed</string>
    <string name="show">Show</string>
    <string name="title_items">Items</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="built_from">Built from</string>
    <string name="built_into">Built into</string>
    <string name="error_text">Ups! Something went wrong</string>
    <string name="error_no_champion_mastery">You don\'t have any mastery on champions!</string>
    <string name="summoners">Summoners</string>
    <string name="leagues">Leagues</string>
    <string name="solo_duo">Solo/Duo</string>
    <string name="fvf_team">5v5 Team</string>
    <string name="tvt_team">3v3 Team</string>
    <string name="unranked">Unranked</string>
    <string name="reload">Load again</string>
    <string name="most_played">Most played champions</string>
    <string name="last_match">Latest Match</string>
    <string name="recent_games">Recent Games</string>
    <string name="choose_language">Choose Language</string>
    <string translatable="false" name="shared_transition">transition%1$d</string>
    <string name="win_at">Win at %1$s</string>
    <string name="lose_at">Lose at %1$s</string>
    <string name="mastery_current">%1$s (current)</string>
    <string name="teams">Teams</string>
    <string name="purple_team">Purple Team</string>
    <string name="blue_team">Blue Team</string>
    <string name="stats">Stats</string>
    <string name="gold">Gold</string>
    <string name="gold_earned">Earned %1$s</string>
    <string name="gold_spent">Spent %1$s</string>
    <string name="damage_dealt">Damage dealt</string>
    <string name="total_damage_dealt">Total dealt %1$s</string>
    <string name="damage_p_dealt">Physical %1$s</string>
    <string name="damage_m_dealt">Magical %1$s</string>
    <string name="damage_t_dealt">True %1$s</string>
    <string name="damage_taken">Damage taken</string>
    <string name="total_damage_taken">Total taken %1$s</string>
    <string name="damage_p_taken">Physical %1$s</string>
    <string name="damage_m_taken">Magical %1$s</string>
    <string name="damage_t_taken">True %1$s</string>
    <string name="summarized_stats">Summarized Stats</string>
    <string name="games_lost">Games Lost</string>
    <string name="games_won">Games Won</string>
    <string name="games_played">Games Played</string>
    <string name="total_kills">Total Kills</string>
    <string name="normal_kills">Normal Kills</string>
    <string name="double_kills">Double Kills</string>
    <string name="triple_kills">Triple Kills</string>
    <string name="quadra_kills">Quadra Kills</string>
    <string name="penta_kills">Penta Kills</string>
    <string name="games">Games</string>
    <string name="damage">Damage</string>
    <string name="kills">Kills</string>
    <string name="total_damage">Damage dealt</string>
    <string name="physical_dealt">Physical dealt</string>
    <string name="magical_dealt">Magical dealt</string>
    <string name="physical_taken">Physical taken</string>
    <string name="magical_taken">Magical taken</string>
    <string name="healing">Total healing</string>
    <string name="largest_crit_strike">Largest critical strike</string>
    <string name="view_more">View more</string>
    <string name="featured_games">Featured Games</string>
    <string name="masteries">Masteries</string>
    <string name="your_masteries">Your masteries</string>
    <string name="your_runes">Your runes</string>
    <string name="runes">Runes</string>
    <string name="mastery_rank">%1$d/%2$d</string>
    <string name="total_exp_needed">Level exp. %1$d / %2$d</string>
    <string name="view_summoner">View Summoner</string>
    <string name="combined_stats">Combined stats</string>
    <string name="favorite_champions">Your Favorite Champions</string>
    <string name="no_favorite_champions">You don\'t have favorite champions yet!</string>
    <string name="favorite_summoners">Your Favorite Summoners</string>
    <string name="no_favorite_summoners">You don\'t have favorite summoners yet!</string>
    <string name="no_stats_for_summoner">There is no ranked stats for this summoner</string>
    <string name="at_a_glance">At a glance</string>
    <string name="more">More</string>
    <string name="action_osl">Open Source Licenses</string>
    <string name="action_about">About TonsOfDamage</string>
    <string name="disclaimer_text">TonsOfDamage isn\'t endorsed by Riot Games and doesn\'t reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</string>
    <string name="action_rate">Rate app</string>
    <string name="week_rotation">Week Rotation</string>
    <string name="league">League</string>
    <string name="emblems">Emblems</string>
    <string name="wins">Wins</string>
    <string name="points">Points</string>
    <string name="no_league_for_summoner">There is no current league ranking for this summoner</string>
    <string name="champion_mastery">Your Champion Mastery</string>
    <string name="total_points">Champion Points</string>
    <string name="tv_attributes_label">Attributes</string>
    <string name="summoner_champion_mastery">Top Champion Mastery</string>
    <string name="top_champion_mastery">Your Top Champions</string>
    <string name="settings">Settings</string>
    <string name="stop_sending_analytics_data">Don\'t send analytics data</string>
    <string name="stop_sending_notifications">Don\'t send notifications</string>
    <string name="clear_favorite_champions_and_summoners">Clear favorite champions and summoners</string>
    <string name="check_server_status">Check server status</string>
    <string name="other">Other</string>
    <string name="action_contact">Contact us</string>
    <string name="atention">Atention</string>
    <string name="are_you_sure_delete_favs">Are you sure to delete all your favorite champions and summoners?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_language">Change language</string>
    <string name="change_region">Change region</string>
    <string name="change_summoner">Change summoner</string>
    <string name="server_status">Server status</string>
    <string translatable="false" name="the_door">5vVMsQOQz6mxx3jdydCJ8LWlNRUNAyXsmO9eEB9UP4BcRNfaYaDagfCju263pYWFXIeC8C1h5wK8ZdPsrbjY9rLAN+pVTXwOkTPgrVh31hcJsVxGtmq5xJ51J8MR7a33iDB0CMRAbwTjB+Ru9D82rqC2m4tmdOGCjAuYNwzHEBE=</string>
    <string name="counter_picks">Counter Picks</string>
    <string name="lore">Lore</string>
    <string name="weak_against">Weak Against</string>
    <string name="strong_against">Strong Against</string>
    <string name="init_error">There was an error while fetching server config</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="analytics_warn">Sending app analytics help us to understand what apps section are most used and allow us to improve the app building better updates</string>
    <string name="keep_sending">Keep sending</string>
    <string name="do_not_send">Don\'t send</string>
    <string translatable="false" name="admob_app_id">ca-app-pub-5876504740127808~9001040376</string>
    <string translatable="false" name="summoner_banner_id">ca-app-pub-5876504740127808/7692430778</string>
    <string translatable="false" name="champion_banner_id">ca-app-pub-5876504740127808/7273628372</string>
    <string translatable="false" name="match_banner_id">ca-app-pub-5876504740127808/6994426778</string>
    <string name="rune_creator">Rune creator</string>
    <string name="showcase_step1">Welcome to TonsOfDamage! This is the land page, you can navigate through bottom bar items to see the different sections</string>
    <string name="showcase_step2">Tap the menu icon to go to your profile</string>
    <string name="showcase_step3">Tap your avatar image to access your detailed profile</string>
    <string name="showcase_fav">Tap fav icon to mark champions and summoners as favorites and have them always in sight</string>
    <string name="rune_creator_msg">COMING SOON!\n Stay tuned to the arrival of the rune creator, with which you will be able to create your own awesome rune pages!</string>
    <string name="no_page_runes_warn">You do not have any rune pages created yet, try adding a new one!</string>
    <string name="action_add">Add new page</string>
    <string name="your_created_rune_pages">Your created rune pages</string>
    <string name="action_udo">Undo</string>

</resources>
