<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/g1"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_masteries"
            android:icon="@drawable/ic_book"
            android:title="@string/your_masteries" />
        <item
            android:id="@+id/nav_runes"
            android:icon="@drawable/ic_rune"
            android:title="@string/your_runes" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/g2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_contact"
            android:title="@string/action_contact" />
    </group>
</menu>
