<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:icon="@drawable/ic_filter"
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_view_mode"
        android:orderInCategory="200"
        android:title="@string/action_view_mode"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />


</menu>