<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:text="@string/settings"
                style="@style/SettingsTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:lines="1"
                android:ellipsize="end"
                android:background="?selectableItemBackground"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:drawableRight="@drawable/ic_user"
                android:textColor="@color/text_color"
                android:gravity="center_vertical"
                android:text="@string/change_summoner"
                android:id="@+id/tv_change_summoner"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <TextView
                android:lines="1"
                android:ellipsize="end"
                android:background="?selectableItemBackground"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:drawableRight="@drawable/ic_lang"
                android:textColor="@color/text_color"
                android:gravity="center_vertical"
                android:text="@string/change_language"
                android:id="@+id/tv_change_lang"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_height="0.5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <TextView
                android:lines="1"
                android:ellipsize="end"
                android:background="?selectableItemBackground"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:drawableRight="@drawable/ic_map_location"
                android:textColor="@color/text_color"
                android:gravity="center_vertical"
                android:text="@string/change_region"
                android:id="@+id/tv_change_region"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <TextView
                android:lines="1"
                android:ellipsize="end"
                android:background="?selectableItemBackground"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:drawableRight="@drawable/ic_server"
                android:textColor="@color/text_color"
                android:gravity="center_vertical"
                android:text="@string/check_server_status"
                android:id="@+id/tv_cehck_server_status"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <TextView
                android:drawablePadding="10dp"
                android:background="?selectableItemBackground"
                android:lines="1"
                android:ellipsize="end"
                android:padding="20dp"
                android:drawableRight="@drawable/ic_like"
                android:textColor="@color/text_color"
                android:gravity="center_vertical"
                android:text="@string/clear_favorite_champions_and_summoners"
                android:id="@+id/tv_clear_favs"
                android:layout_width="match_parent"
                android:layout_height="70dp" />


            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <CheckBox
                android:id="@+id/cb_stop_sending_notifs"
                android:textColor="@color/text_color"
                android:layout_marginLeft="10dp"
                android:lines="1"
                android:ellipsize="end"
                android:text="@string/stop_sending_notifications"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_notification"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_height="0.5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <CheckBox
                android:id="@+id/cb_stop_sending_analytics"
                android:layout_marginLeft="10dp"
                android:textColor="@color/text_color"
                android:lines="1"
                android:ellipsize="end"
                android:text="@string/stop_sending_analytics_data"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_analytics"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <TextView
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/other"
                style="@style/SettingsTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:drawablePadding="10dp"
                android:background="?selectableItemBackground"
                android:lines="1"
                android:ellipsize="end"
                android:padding="20dp"
                android:drawableRight="@drawable/ic_star"
                android:textColor="@color/text_color"
                android:gravity="center_vertical"
                android:text="@string/action_rate"
                android:id="@+id/tv_rate_app"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <TextView
                android:drawablePadding="10dp"
                android:background="?selectableItemBackground"
                android:lines="1"
                android:ellipsize="end"
                android:padding="20dp"
                android:textColor="@color/text_color"
                android:gravity="center_vertical"
                android:text="@string/action_osl"
                android:id="@+id/tv_osl"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <com.ablanco.tonsofdamage.views.Separator
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_height="0.5dp"
                android:layout_marginRight="40dp"
                app:separatorColor="@color/colorFallBackAccent"/>

            <TextView
                android:drawablePadding="10dp"
                android:background="?selectableItemBackground"
                android:padding="20dp"
                android:lines="1"
                android:ellipsize="end"
                android:textColor="@color/text_color"
                android:gravity="center_vertical"
                android:text="@string/action_about"
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>