<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg"
        android:layout_width="316dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="5dp"
            android:padding="15dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/tv_title"
            android:text="@string/choose_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_marginBottom="5dp"
            android:overScrollMode="ifContentScrolls"
            android:layout_below="@id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:paddingBottom="10dp"/>

        <Button
            android:layout_margin="8dp"
            android:id="@+id/bt_ok"
            android:layout_alignParentRight="true"
            android:text="@string/Ok"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/recycler_view"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_toLeftOf="@id/bt_ok"
            android:layout_margin="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/recycler_view"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>