<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/tv_no_league"
        android:text="@string/no_league_for_summoner"
        android:textColor="@color/colorFallBackAccent"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_league"
            android:visibility="invisible"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorPrimaryDarkAccent"
            app:cardCornerRadius="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/header_layout"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_centerVertical="true"
                        android:id="@+id/img_league"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/base_provisional" />


                    <TextView
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:id="@+id/tv_label_division"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/img_league"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="@color/colorFallBackAccent"
                        android:textSize="11sp"
                        android:text="Division" />

                    <Spinner
                        android:id="@+id/spinner_division"
                        android:layout_alignRight="@id/tv_label_division"
                        android:layout_alignLeft="@id/tv_label_division"
                        android:layout_marginTop="7dp"
                        android:layout_below="@id/tv_label_division"
                        android:layout_toRightOf="@id/img_league"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"/>

                    <TextView
                        android:id="@+id/tv_league_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_label_division"
                        android:layout_alignBottom="@id/spinner_division"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorAccent"
                        tools:text="Sympherions Gods" />

                    <TextView
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tv_tier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_label_division"
                        android:ellipsize="end"
                        android:lines="1"
                        android:layout_above="@id/tv_league_name"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorAccent"
                        tools:text="Bronze" />

                </RelativeLayout>


                <com.ablanco.tonsofdamage.views.Separator
                    android:id="@+id/top_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/header_layout"
                    app:separatorColor="@color/colorAccent"/>

                <LinearLayout
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:orientation="horizontal"
                    android:id="@+id/ll_header"
                    android:layout_below="@id/top_separator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="11sp"
                        android:lines="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:textColor="@color/text_color"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="11sp"
                        android:textAllCaps="true"
                        android:lines="1"
                        android:ellipsize="end"
                        android:text="@string/summoners"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_color"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textAllCaps="true"
                        android:text="@string/wins"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_color"
                        android:textSize="11sp"
                        android:lines="1"
                        android:ellipsize="end"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textAllCaps="true"
                        android:text="@string/points"
                        android:lines="1"
                        android:ellipsize="end"
                        android:textSize="11sp"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_color"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:paddingTop="15dp"
                    android:layout_below="@id/ll_header"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp" />

</RelativeLayout>